objects/copado__Deployment_Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <label>Deployment Flow</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps (Destination Environment)</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Flow Step</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Deployment Flow Step Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>